[package]
name = "twitter-account-status-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
dotenv = "0.15.0"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
actix-web = "4"
cached = "0.34.0"
chrono = "0.4.19"
futures = "0.3.21"
